# ws-crawler

./: AI_USAGE.md  Coursework_Brief.md  README.md  SUBMISSION.txt  VIDEO_OUTLINE.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
benchmarks/: benchmark_search.py
data/: index.json
lessons/: 01-polite-crawling.md  02-parsing-and-link-discovery.md  03-inverted-index-construction.md  04-query-processing-and-ranking.md  05-cli-persistence-and-testing.md  06-critical-genai-usage.md  README.md
src/: crawler.py  indexer.py  main.py  search.py
tests/: test_cli_e2e.py  test_crawler.py  test_indexer.py  test_main.py  test_search.py
