[project]
name = "comp3011-search-tool"
version = "1.0.0"
description = "Coursework search tool with a polite crawler, inverted index, and CLI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4==4.12.3",
    "requests==2.32.3",
]

[dependency-groups]
dev = [
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --strict-config"
pythonpath = ["."]
